@@ -20,7 +20,7 @@ just keep in mind this is a pre-release.
 
 e-mail me at: qball@qballcow.nl
 
-\section{Goal: }
+\section{Goal}
 
 Trying to provide a easy to use high level, callback based access to mpd. It
 tries to be fast and keep the data transfer with mpd to the minimum. 
@@ -43,7 +43,7 @@ It's written in plain C and uses the following header files
 
 \section{Status}
 
-\subsection{ Implemented:}
+\subsection{Implemented}
 
 \begin{itemize}
   \item Basic player access.
